<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/error_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >
        <TextView
            android:id="@+id/incompatible_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incompatible_device_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/incompatible_desc"
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/incompatible_device_desc"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/no_root_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_root_permission"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/no_root_desc"
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_root_desc"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</ScrollView>